--- a/09.html
+++ b/09.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        div{
+        #t1{
             width:250px;
             height:100px;
             background-color:burlywood;
@@ -14,11 +14,23 @@
             margin: 100px;
             overflow: scroll;
             /* hidden scroll auto */
+            border:7px double purple;
+            /* 두께(굵기) 선의종류(solid dotted dashed double) 색상 */
+        }
+        #t2{
+            width: 200px;
+            height:200px;
+            margin-left: 50px;
+            margin-right: 50px;
+            /* margin:0 50px 0 50px */
+            padding: 0 20px 0 20px;
+            overflow: auto;
+            border: 5px dotted blue;
         }
     </style>
 </head>
 <body>
-    <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis exercitationem similique eveniet, soluta odit nesciunt sapiente? Nemo doloremque ut, culpa omnis praesentium earum odit impedit eos! Magni nostrum dolorum quae.</div>
-
+    <div id="t1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis exercitationem similique eveniet, soluta odit nesciunt sapiente? Nemo doloremque ut, culpa omnis praesentium earum odit impedit eos! Magni nostrum dolorum quae.</div>
+    <div id="t2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis exercitationem similique eveniet, soluta odit nesciunt sapiente? Nemo doloremque ut, culpa omnis praesentium earum odit impedit eos! Magni nostrum dolorum quae.</div>
 </body>
 </html>
